[package]
name = "vodovod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2.1"
reqwest = { version = "0.11", features = ["json"] }
select = "0.5.0"
tokio = { version = "1.14", features = ["full"] }
webbrowser = "0.5.5"
